--- a/docker-compose-dokploy.yml
+++ b/docker-compose-dokploy.yml
@@ -19,9 +19,9 @@ services:
     container_name: portify-api
     restart: always
     environment:
-      DATABASE_URL="postgresql://postgres:1234@db:5432/portify?schema=public"
-      JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
-      PORT=5000
+      DATABASE_URL: "postgresql://postgres:1234@db:5432/portify?schema=public"
+      JWT_SECRET: "your-super-secret-jwt-key-change-this-in-production"
+      PORT: 5000
     depends_on:
       - db
     networks:
